[package]
name = "mlock"
license = "GPL-3.0-only"
version = "0.1.0"
authors = ["Rastislav Kish <rastislav.kish@protonmail.com>"]
edition = "2021"
description = "Mouse location keeper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.0.29", features = ["derive"] }
mouse-rs="0.4.2"

